Changes for 3.4.0beta3

New features:
..F....... [ZBXNEXT-2102] implemented dashboard widget linking in both directions (miks)
..F....... [ZBXNEXT-2102] implemented option 'Show unavailable maps' in navigation tree widget (miks)

Bug fixes:
..F....... [ZBX-12418] fixed draggable rectangle calculation for map shape lines (vjaceslavs)
...G...... [ZBX-12397] fixed system.cpu.num count for 64-bit Windows with more than 64 logical cpus (abs)
.......PS. [ZBX-12483] fixed compilation with libevent 2.1.8 and IPC service initialization in proxy (Andris)
........S. [ZBX-12485] fixed PostgreSQL query errors during sending notifications on acknowledgement (Sergejs)
.......PS. [ZBXNEXT-3006] fixed web scenario item preprocessing (wiper)
..F....... [ZBXNEXT-2102] fixed low performance of navigation tree widget and improved dashboard performance (miks)
.......PS. [ZBX-12458] fixed incorrect use of zbx_strlcat() in DBpatch_3030060_migrate_pairs(); thanks to MATSUDA Daiki for patch (Andris)

--------------------------------------------------------------------------------
Changes for 3.4.0beta2

Bug fixes:
....I..... [ZBX-12462] fixed database upgrade patch for proxy (dimir)
....I..PS. [ZBXNEXT-3006] fixed distribution archive creation (make dist) and log, web scenario item preprocessing (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.0beta1

New features:
..F....... [ZBXNEXT-2102] added support of new dashboard widgets "Plain text" and "Graph" (miks, vmurzins)
..F....... [ZBXNEXT-2102] implemented two-direction widget linkage for data sharing; improved active element selection in map navigation tree widget when map is changed from map widget (miks)
..F....... [ZBXNEXT-2102] implemented validation for empty fields in widget configuration forms (Sasha)
..F....... [ZBXNEXT-2102] added placeholder on empty dashboard (vmurzins)