@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-2102] implemented option 'Show unavailable maps' in navigation tree widget (miks)
 
 Bug fixes:
+..F....... [ZBX-12468] fixed vertical text alignment for map shapes (vjaceslavs)
 ..F....... [ZBX-12418] fixed draggable rectangle calculation for map shape lines (vjaceslavs)
 ...G...... [ZBX-12397] fixed system.cpu.num count for 64-bit Windows with more than 64 logical cpus (abs)
 .......PS. [ZBX-12483] fixed compilation with libevent 2.1.8 and IPC service initialization in proxy (Andris)
